--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,20 @@ h1 {
   font-size: 6rem;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  top: 0;
+}
+
+header.scrolled {
+  background-color: #ffffff;
+}
+
+section.hero {
+  margin: 100px 0 0 0; 
+}
 @media screen and (min-width: 768px) {
   h1 {
     font-size: 5.8rem;
