--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,13 @@ a {
     max-height: 100%;
     opacity: 1;
   }
+
+}
+
+@media screen and (max-width: 1000px) {
+  .hero-square {
+    display: none;
+  }
 }
 
 /* Hero */
@@ -384,9 +391,8 @@ a {
 }
 .date {
   font-size: 2.4rem;
-  margin: 3.2rem 0 5rem;
+  margin: 4.8rem 0;
 }
-
 .container {
   width: 80%;
   max-width: 1100px;
